cabal-version:      2.4
name:               pederson-commitment
version:            0.1.0.0
author:             Samuel Schlesinger
maintainer:         sam@casperlabs.io
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Math.Pederson
    build-depends:    base ^>=4.14.3.0,
                      random >=1.2 && <1.3
    hs-source-dirs:   src
    default-language: Haskell2010
